--- a/mon-app-rick-morty/package.json
+++ b/mon-app-rick-morty/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
+    "@vue/apollo-composable": "^4.0.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
